--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@babel/plugin-proposal-class-properties": "^7.4.4",
 		"@babel/preset-env": "^7.4.5",
 		"@babel/preset-react": "^7.0.0",
+		"babel-eslint": "^10.0.2",
 		"babel-loader": "^8.0.6",
 		"css-loader": "^2.1.1",
 		"style-loader": "^0.23.1",
